index.html update
Added links

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<div class="proj_title">
 							<h3>Portfolio Site</h3>
 						</div>
-							<p><a href="" target="_blank" class="proj_source">https://</a></p>
+							<p><a href="https://github.com/slunickova/UdacityProject_PortfolioSite" target="_blank" class="proj_source">https://github.com/slunickova/UdacityProject_PortfolioSite</a></p>
 					</div>
 	<!--fourth project-->
 					<div class="one_block">
