--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 	<!--first project-->
 				<div class="one_block">
 					<div class="proj_pic">
+						<a href="https://github.com/slunickova/UdacityProject_AnimalTradingCard" target="_blank">
 						<img src="trading-card-pic.jpg" alt="animal trading card project">
+						</a>
 					</div>
 					<div class="proj_title">
 						<h3>Animal Trading Card</h3>
@@ -53,7 +55,9 @@
 	<!--second project-->
 					<div class="one_block">
 						<div class="proj_pic">
+							<a href="https://github.com/slunickova/UdacityProject_PixelArtMaker" target="_blank">
 							<img src="pixel-art-pic.jpg" alt="pixel art maker project">
+							</a>
 						</div>
 						<div class="proj_title">
 							<h3>Pixel Art Maker</h3>
@@ -63,7 +67,9 @@
 	<!--third project-->
 					<div class="one_block">
 						<div class="proj_pic">
+							<a href="https://github.com/slunickova/UdacityProject_PortfolioSite" target="_blank">
 							<img src="placeholder-small.jpg" alt="portfolio site project">
+							</a>
 						</div>
 						<div class="proj_title">
 							<h3>Portfolio Site</h3>
@@ -73,7 +79,9 @@
 	<!--fourth project-->
 					<div class="one_block">
 						<div class="proj_pic">
+							<a href="https://github.com/slunickova/" target="_blank">
 							<img src="question-mark.jpg" alt="question mark">
+							</a>
 						</div>
 						<div class="proj_title">
 							<h3>Project to come</h3>
@@ -92,15 +100,15 @@
 						LinkedIn
 					</a>
 
-				<a href="https://github.com/slunickova" target="_blank" class="social-reference">
-					<img class="social-icon" src="github-logo-silhouette-in-a-square.png" alt="github logo">
-					GitHub
-				</a>
+					<a href="https://github.com/slunickova" target="_blank" class="social-reference">
+						<img class="social-icon" src="github-logo-silhouette-in-a-square.png" alt="github logo">
+						GitHub
+					</a>
 
-				<a href="https://www.facebook.com/bauerovalucie" target="_blank" class="social-reference">
-					<img class="social-icon" src="facebook-logo.png" alt="facebook logo">
-					Facebook
-				</a>
+					<a href="https://www.facebook.com/bauerovalucie" target="_blank" class="social-reference">
+						<img class="social-icon" src="facebook-logo.png" alt="facebook logo">
+						Facebook
+					</a>
 			</p>
 			</div>
 		</footer>
