--- a/index.html
+++ b/index.html
@@ -17,21 +17,16 @@
 			</div>
 			<div class="title">
 				<h1>Lucie Slunčíková</h1>
-			<div class="subtitle">
-				<h3>coding mama</h3>
-			</div>
+				<div class="subtitle">
+					<h3>coding mama</h3>
+				</div>
 			</div>
 			<hr/>
 		</header>
 
 		<main>
-			<section class="intro">
-				<div class="big_pic">
-<!--				<img src="placeholder-big.jpg" alt="">-->
-				</div>
-				<div class="about_me">
-					<p>This is my first porftolio site. It consists of projects I had a chance to develop during the Front-End Web Developer Nanodegree Program by Udacity. To this 6 month course I've been chosen from a previous Google Developer Challenge Scholarship which took another 3 months.</p>
-				</div>
+			<section class="about_me">
+				<p>This is my first porftolio site. It consists of projects I had a chance to develop during the Front-End Web Developer Nanodegree Program by Udacity. To this 6 month course I've been chosen from a previous Google Developer Challenge Scholarship which took another 3 months. These projects are made using HTML, CSS and JavaScript to demonstrate new skills learned during the course.</p>
 			</section>
 	<!--here is the section showing my projects-->
 			<section class="work">
@@ -68,7 +63,7 @@
 					<div class="one_block">
 						<div class="proj_pic">
 							<a href="https://github.com/slunickova/UdacityProject_PortfolioSite" target="_blank">
-							<img src="placeholder-small.jpg" alt="portfolio site project">
+							<img src="portfolio-pic2.jpg" alt="portfolio site project">
 							</a>
 						</div>
 						<div class="proj_title">
@@ -97,17 +92,17 @@
 				<p>
 					<a href="https://www.linkedin.com/in/luciebauerova/" target="_blank" class="social-reference">
 						<img class="social-icon" src="linkedin-logo.png" alt="linkedin logo">
-						LinkedIn
+						<span class="social-text">LinkedIn</span>
 					</a>
 
 					<a href="https://github.com/slunickova" target="_blank" class="social-reference">
 						<img class="social-icon" src="github-logo-silhouette-in-a-square.png" alt="github logo">
-						GitHub
+						<span class="social-text">GitHub</span>
 					</a>
 
 					<a href="https://www.facebook.com/bauerovalucie" target="_blank" class="social-reference">
 						<img class="social-icon" src="facebook-logo.png" alt="facebook logo">
-						Facebook
+						<span class="social-text">Facebook</span>
 					</a>
 			</p>
 			</div>
