--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Portfolio Site | Lucie Slunčíková</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<link rel="stylesheet" type="text/css" href="responsive.css">
+	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/responsive.css">
 </head>
-
 <body>
 	<div class="content">
 		<header>
 			<div class="logo">
-				<img src="logo-udacity2.jpg" alt="Udacity logo">
+				<img src="img/logo-udacity2.jpg" alt="Udacity logo">
 			</div>
 			<div class="title">
 				<h1>Lucie Slunčíková</h1>
@@ -23,7 +22,6 @@
 			</div>
 			<hr/>
 		</header>
-
 		<main>
 			<section class="about_me">
 				<p>This is my first porftolio site. It consists of projects I had a chance to develop during the Front-End Web Developer Nanodegree Program by Udacity. To this 6 month course I've been chosen from a previous Google Developer Challenge Scholarship which took another 3 months. These projects are made using HTML, CSS and JavaScript to demonstrate new skills learned during the course.</p>
@@ -34,24 +32,23 @@
 					<h2>Featured Work</h2>
 				</div>
 				<div class="projects">
-
 	<!--first project-->
-				<div class="one_block">
-					<div class="proj_pic">
-						<a href="https://github.com/slunickova/UdacityProject_AnimalTradingCard" target="_blank">
-						<img src="trading-card-pic.jpg" alt="animal trading card project">
-						</a>
+					<div class="one_block">
+						<div class="proj_pic">
+							<a href="https://github.com/slunickova/UdacityProject_AnimalTradingCard" target="_blank">
+							<img src="img/trading-card-pic.jpg" alt="animal trading card project">
+							</a>
+						</div>
+						<div class="proj_title">
+							<h3>Animal Trading Card</h3>
+						</div>
+							<p><a href="https://github.com/slunickova/UdacityProject_AnimalTradingCard" target="_blank" class="proj_source">https://github.com/slunickova/UdacityProject_AnimalTradingCard</a></p>
 					</div>
-					<div class="proj_title">
-						<h3>Animal Trading Card</h3>
-					</div>
-						<p><a href="https://github.com/slunickova/UdacityProject_AnimalTradingCard" target="_blank" class="proj_source">https://github.com/slunickova/UdacityProject_AnimalTradingCard</a></p>
-				</div>
 	<!--second project-->
 					<div class="one_block">
 						<div class="proj_pic">
 							<a href="https://github.com/slunickova/UdacityProject_PixelArtMaker" target="_blank">
-							<img src="pixel-art-pic.jpg" alt="pixel art maker project">
+							<img src="img/pixel-art-pic.jpg" alt="pixel art maker project">
 							</a>
 						</div>
 						<div class="proj_title">
@@ -63,7 +60,7 @@
 					<div class="one_block">
 						<div class="proj_pic">
 							<a href="https://github.com/slunickova/UdacityProject_PortfolioSite" target="_blank">
-							<img src="portfolio-pic2.jpg" alt="portfolio site project">
+							<img src="img/portfolio-pic2.jpg" alt="portfolio site project">
 							</a>
 						</div>
 						<div class="proj_title">
@@ -75,7 +72,7 @@
 					<div class="one_block">
 						<div class="proj_pic">
 							<a href="https://github.com/slunickova/" target="_blank">
-							<img src="question-mark.jpg" alt="question mark">
+							<img src="img/question-mark.jpg" alt="question mark">
 							</a>
 						</div>
 						<div class="proj_title">
@@ -86,22 +83,19 @@
 				</div>
 			</section>
 		</main>
-
 		<footer>
 			<div class="contact">
 				<p>
 					<a href="https://www.linkedin.com/in/luciebauerova/" target="_blank" class="social-reference">
-						<img class="social-icon" src="linkedin-logo.png" alt="linkedin logo">
+						<img class="social-icon" src="img/linkedin-logo.png" alt="linkedin logo">
 						<span class="social-text">LinkedIn</span>
 					</a>
-
 					<a href="https://github.com/slunickova" target="_blank" class="social-reference">
-						<img class="social-icon" src="github-logo-silhouette-in-a-square.png" alt="github logo">
+						<img class="social-icon" src="img/github-logo-silhouette-in-a-square.png" alt="github logo">
 						<span class="social-text">GitHub</span>
 					</a>
-
 					<a href="https://www.facebook.com/bauerovalucie" target="_blank" class="social-reference">
-						<img class="social-icon" src="facebook-logo.png" alt="facebook logo">
+						<img class="social-icon" src="img/facebook-logo.png" alt="facebook logo">
 						<span class="social-text">Facebook</span>
 					</a>
 			</p>
