--- a/index.html
+++ b/index.html
@@ -2,83 +2,73 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta content="width=device-width,initial-scale=1" name="viewport">
 	<title>Portfolio Site | Lucie Slunčíková</title>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="css/responsive.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link href="css/styles.css" rel="stylesheet">
+	<link href="css/responsive.css" rel="stylesheet">
 </head>
 <body>
 	<div class="content">
 		<header>
-			<div class="logo">
-				<img src="img/logo-udacity2.jpg" alt="Udacity logo">
-			</div>
+			<div class="logo"><img alt="Udacity logo" src="img/logo-udacity2.jpg"></div>
 			<div class="title">
 				<h1>Lucie Slunčíková</h1>
 				<div class="subtitle">
 					<h3>coding mama</h3>
 				</div>
 			</div>
-			<hr/>
+			<hr>
 		</header>
 		<main>
 			<section class="about_me">
 				<p>This is my first porftolio site. It consists of projects I had a chance to develop during the Front-End Web Developer Nanodegree Program by Udacity. To this 6 month course I've been chosen from a previous Google Developer Challenge Scholarship which took another 3 months. These projects are made using HTML, CSS and JavaScript to demonstrate new skills learned during the course.</p>
 			</section>
-	<!--here is the section showing my projects-->
+<!--here is the section showing my projects-->
 			<section class="work">
 				<div class="work_title">
 					<h2>Featured Work</h2>
 				</div>
 				<div class="projects">
-	<!--first project-->
+<!--first project-->
 					<div class="one_block">
 						<div class="proj_pic">
-							<a href="https://github.com/slunickova/UdacityProject_AnimalTradingCard" target="_blank">
-							<img src="img/trading-card-pic.jpg" alt="animal trading card project">
-							</a>
+							<a href="https://github.com/slunickova/UdacityProject_AnimalTradingCard" target="_blank"><img alt="animal trading card project" src="img/trading-card-pic.jpg"></a>
 						</div>
 						<div class="proj_title">
 							<h3>Animal Trading Card</h3>
 						</div>
-							<p><a href="https://github.com/slunickova/UdacityProject_AnimalTradingCard" target="_blank" class="proj_source">https://github.com/slunickova/UdacityProject_AnimalTradingCard</a></p>
+						<p><a class="proj_source" href="https://github.com/slunickova/UdacityProject_AnimalTradingCard" target="_blank">https://github.com/slunickova/UdacityProject_AnimalTradingCard</a></p>
 					</div>
-	<!--second project-->
+<!--second project-->
 					<div class="one_block">
 						<div class="proj_pic">
-							<a href="https://github.com/slunickova/UdacityProject_PixelArtMaker" target="_blank">
-							<img src="img/pixel-art-pic.jpg" alt="pixel art maker project">
-							</a>
+							<a href="https://github.com/slunickova/UdacityProject_PixelArtMaker" target="_blank"><img alt="pixel art maker project" src="img/pixel-art-pic.jpg"></a>
 						</div>
 						<div class="proj_title">
 							<h3>Pixel Art Maker</h3>
 						</div>
-							<p><a href="https://github.com/slunickova/UdacityProject_PixelArtMaker" target="_blank" class="proj_source">https://github.com/slunickova/UdacityProject_PixelArtMaker</a></p>
+						<p><a class="proj_source" href="https://github.com/slunickova/UdacityProject_PixelArtMaker" target="_blank">https://github.com/slunickova/UdacityProject_PixelArtMaker</a></p>
 					</div>
-	<!--third project-->
+<!--third project-->
 					<div class="one_block">
 						<div class="proj_pic">
-							<a href="https://github.com/slunickova/UdacityProject_PortfolioSite" target="_blank">
-							<img src="img/portfolio-pic2.jpg" alt="portfolio site project">
-							</a>
+							<a href="https://github.com/slunickova/UdacityProject_PortfolioSite" target="_blank"><img alt="portfolio site project" src="img/portfolio-pic2.jpg"></a>
 						</div>
 						<div class="proj_title">
 							<h3>Portfolio Site</h3>
 						</div>
-							<p><a href="https://github.com/slunickova/UdacityProject_PortfolioSite" target="_blank" class="proj_source">https://github.com/slunickova/UdacityProject_PortfolioSite</a></p>
+						<p><a class="proj_source" href="https://github.com/slunickova/UdacityProject_PortfolioSite" target="_blank">https://github.com/slunickova/UdacityProject_PortfolioSite</a></p>
 					</div>
-	<!--fourth project-->
+<!--fourth project-->
 					<div class="one_block">
 						<div class="proj_pic">
-							<a href="https://github.com/slunickova/" target="_blank">
-							<img src="img/question-mark.jpg" alt="question mark">
-							</a>
+							<a href="https://github.com/slunickova/" target="_blank"><img alt="question mark" src="img/question-mark.jpg"></a>
 						</div>
 						<div class="proj_title">
 							<h3>Project to come</h3>
 						</div>
-							<p><a href="https://github.com/slunickova/" target="_blank" class="proj_source">https://github.com/slunickova/</a></p>
+						<p><a class="proj_source" href="https://github.com/slunickova/" target="_blank">https://github.com/slunickova/</a></p>
 					</div>
 				</div>
 			</section>
@@ -86,19 +76,10 @@
 		<footer>
 			<div class="contact">
 				<p>
-					<a href="https://www.linkedin.com/in/luciebauerova/" target="_blank" class="social-reference">
-						<img class="social-icon" src="img/linkedin-logo.png" alt="linkedin logo">
-						<span class="social-text">LinkedIn</span>
-					</a>
-					<a href="https://github.com/slunickova" target="_blank" class="social-reference">
-						<img class="social-icon" src="img/github-logo-silhouette-in-a-square.png" alt="github logo">
-						<span class="social-text">GitHub</span>
-					</a>
-					<a href="https://www.facebook.com/bauerovalucie" target="_blank" class="social-reference">
-						<img class="social-icon" src="img/facebook-logo.png" alt="facebook logo">
-						<span class="social-text">Facebook</span>
-					</a>
-			</p>
+					<a class="social-reference" href="https://www.linkedin.com/in/luciebauerova/" target="_blank"><img alt="linkedin logo" class="social-icon" src="img/linkedin-logo.png"> <span class="social-text">LinkedIn</span></a>
+					<a class="social-reference" href="https://github.com/slunickova" target="_blank"><img alt="github logo" class="social-icon" src="img/github-logo-silhouette-in-a-square.png"> <span class="social-text">GitHub</span></a>
+					<a class="social-reference" href="https://www.facebook.com/bauerovalucie" target="_blank"><img alt="facebook logo" class="social-icon" src="img/facebook-logo.png"> <span class="social-text">Facebook</span></a>
+				</p>
 			</div>
 		</footer>
 	</div>
