add new project
Add memory game project

--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
 <!--fourth project-->
 					<div class="one_block">
 						<div class="proj_pic">
+							<a href="https://github.com/slunickova/UdacityProject_MemoryGame" target="_blank"><img alt="memory game project" src="img/memory-pic.jpg"></a>
+						</div>
+						<div class="proj_title">
+							<h3>Memory Game</h3>
+						</div>
+						<p><a class="proj_source" href="https://github.com/slunickova/UdacityProject_MemoryGame" target="_blank">https://github.com/slunickova/UdacityProject_MemoryGame</a></p>
+					</div>
+<!--fifth project-->
+					<div class="one_block">
+						<div class="proj_pic">
 							<a href="https://github.com/slunickova/" target="_blank"><img alt="question mark" src="img/question-mark.jpg"></a>
 						</div>
 						<div class="proj_title">
@@ -70,6 +80,7 @@
 						</div>
 						<p><a class="proj_source" href="https://github.com/slunickova/" target="_blank">https://github.com/slunickova/</a></p>
 					</div>
+
 				</div>
 			</section>
 		</main>
